--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
   <a class="navbar-brand ms-3" href="/">
     <img src="/images/logo.svg" alt="Logo" height="30" class="d-inline-block align-text-top me-2">
-    <span class="align-middle">PortfoliQ</span>
+    <span class="align-middle">PortfoliQue</span>
   </a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
