--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -37,7 +37,7 @@
                     <div class="text-center mt-3">
                         <span style="color: var(--text-secondary);">Don't have an account?</span>
                         <br>
-                        <a href="/register" class="btn btn-outline-primary mt-2" style="border-color: var(--primary); color: var(--primary); border-radius: 8px; padding: 8px 15px; font-weight: 600;">Sign up</a>
+                        <a href="/register" class="btn btn-outline-primary mt-2">Sign up</a>
                     </div>
                 </div>
             </div>
