--- a/views/feedbacks/show.ejs
+++ b/views/feedbacks/show.ejs
@@ -36,18 +36,24 @@
                     </ul>
 
                     <div class="d-flex justify-content-end">
-                        <% if (currentUser && feedback.user.equals(currentUser._id)) { %>
-                            <form action="/portfolios/<%= feedback.portfolio._id %>/feedbacks/<%= feedback._id %>?_method=DELETE" method="POST">
-                                <button class="btn btn-danger btn-sm">
-                                    <i class="fas fa-trash-alt me-1"></i> Delete Feedback
-                                </button>
-                            </form>
+                        <% if (currentUser && feedback.user && feedback.user.equals(currentUser._id)) { %>
+                            <button type="button" class="btn btn-danger btn-sm" 
+                                    data-bs-toggle="modal" 
+                                    data-bs-target="#deleteConfirmModal" 
+                                    data-delete-url="/portfolios/<%= feedback.portfolio._id %>/feedbacks/<%= feedback._id %>?_method=DELETE">
+                                <i class="fas fa-trash-alt me-1"></i> Delete Feedback
+                            </button>
                         <% } %>
                         <a href="/portfolios/<%= feedback.portfolio._id %>/feedbacks" class="btn btn-secondary btn-sm ms-2">
                             <i class="fas fa-arrow-left me-1"></i> Back to All Feedbacks
                         </a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+       </div>
             </div>
         </div>
     </div>
