--- a/views/users/my_feedbacks.ejs
+++ b/views/users/my_feedbacks.ejs
@@ -5,6 +5,7 @@
     <% if (feedbacks.length) { %>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <% feedbacks.forEach(feedback=> { %>
+                <% if (feedback.portfolio) { %>
                 <div class="col">
                     <div class="card mb-3 feedback-card h-100 shadow-sm">
                         <div class="card-body d-flex flex-column">
@@ -45,6 +46,9 @@
                                     class="btn btn-sm btn-outline-primary mt-2">
                                     View Details <i class="fas fa-arrow-right ms-1"></i>
                                 </a>
+                                <button type="button" class="btn btn-sm btn-outline-danger mt-2" data-bs-toggle="modal" data-bs-target="#deleteConfirmModal" data-delete-url="/portfolios/<%= feedback.portfolio._id %>/feedbacks/<%= feedback._id %>?_method=DELETE">
+                                    Delete <i class="fas fa-trash-alt ms-1"></i>
+                                </button>
                             </div>
                             <a href="/portfolios/<%= feedback.portfolio._id %>/feedbacks/<%= feedback._id %>"
                                 class="mt-3 d-block">
@@ -62,6 +66,7 @@
                         </div>
                     </div>
                 </div>
+                <% } %>
                 <% }); %>
         </div>
         <% } else { %>
