--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -42,11 +42,11 @@
                         </div>
 
                         <div class="d-flex justify-content-center gap-3 mb-4">
-                            <a href="/profile/myportfolios" class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2 text-decoration-none">
-                                <i class="fas fa-upload me-1"></i> Submissions: <%= userPortfolios.length %>
+                            <a href="/profile/myportfolios" class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2 text-decoration-none text-wrap">
+                                <i class="fas fa-upload me-1"></i> <br>Submissions: <%= userPortfolios.length %>
                             </a>
-                            <a href="/profile/myfeedbacks" class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2 text-decoration-none">
-                                <i class="fas fa-comments me-1"></i> Feedbacks Given: <%= userFeedbacks.length %>
+                            <a href="/profile/myfeedbacks" class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2 text-decoration-none text-wrap">
+                                <i class="fas fa-comments me-1"></i><br> Feedbacks Given: <%= userFeedbacks.length %>
                             </a>
                         </div>
 
@@ -110,10 +110,7 @@
                             </form>
                         </div>
                     </div>
-                </div>
-
-                <!-- Delete Account Card -->
-                
+                </div>                
             </div>
         </div>
     </div>
