--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -7,8 +7,8 @@
   <link rel="icon" href="/images/favicon.png" type="image/svg+xml">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-</head>
+      <link rel="stylesheet" href="/css/style.css">
+      <link rel="stylesheet" href="/css/feedback_page.css"></head>
 <body class="text-dark">
   <%- include('../partials/navbar') %>
   <%- include('../partials/flash') %>
