fixed small screen view

--- a/public/css/feedback_page.css
+++ b/public/css/feedback_page.css
@@ -11,3 +11,9 @@
 .feedbacks-container {
     flex: 1;
 }
+
+@media (max-width: 768px) {
+    .feedback-page-container {
+        flex-direction: column;
+    }
+}
